<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/epg_item_menu_timer_toggle"
        android:title="@string/epg_item_menu_timer_enable"
        android:visible="false"/>
    <item
        android:id="@+id/epg_item_menu_timer_add"
        android:title="@string/epg_item_menu_timer_add"/>
    <item
        android:id="@+id/epg_item_menu_timer_delete"
        android:title="@string/epg_item_menu_timer_delete"
        android:visible="false"/>
    <item
        android:id="@+id/epg_item_menu_timer_modify"
        android:title="@string/epg_item_menu_timer_modify"
        android:visible="false"/>
    <item
        android:id="@+id/epg_item_menu_live_tv"
        android:title="@string/livetv"
        android:visible="false"/>
    <item
        android:id="@+id/epg_item_menu_switchto"
        android:title="@string/switch_to_channel"
        android:visible="true"/>

</menu>