<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:v7="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/main_menu_goto"
        android:icon="@drawable/ic_menu_goto"
        v7:showAsAction="ifRoom"
        android:title="@string/main_menu_goto"/>
    <item
        android:id="@+id/menu_search"
        v7:actionViewClass="android.support.v7.widget.SearchView"
        android:icon="@android:drawable/ic_menu_search"
        v7:showAsAction="always"
        android:title="@string/search"/>
    <item
        android:id="@+id/main_menu_preferences"
        android:icon="@android:drawable/ic_menu_preferences"
        v7:showAsAction="ifRoom"
        android:title="@string/main_menu_preferences"/>
    <item
        android:id="@+id/main_menu_clear_search"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/main_menu_clear_search"/>
    <item
        android:id="@+id/main_menu_info"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/main_menu_info"/>
    <item
        android:id="@+id/main_menu_exit"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        android:title="@string/main_menu_exit"/>

</menu>