<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/epg_details_menu_search_repeat"
        android:showAsAction="ifRoom"
        android:icon="@drawable/ic_menu_view"
        android:title="@string/search_reapt"/>

    <item
        android:showAsAction="ifRoom"
        android:id="@+id/epg_details_menu_share"
        android:icon="@android:drawable/ic_menu_share"
        android:title="@string/share"/>

    <item
        android:showAsAction="ifRoom"
        android:id="@+id/epg_details_menu_add_to_cal"
        android:icon="@android:drawable/ic_menu_month"
        android:title="@string/addtocal"/>

 	<item
        android:id="@+id/epg_details_menu_switch"
        android:icon="@drawable/ic_menu_goto"
        android:title="@string/switch_to_channel"/>
</menu>
