<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

   <LinearLayout
        android:id="@+id/whatson_time"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
         <TextView
            android:id="@+id/epg_list_time_label"      
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/epg_list_time_label"/>

			   <Spinner
			       android:id="@+id/epg_list_time_spinner"
			       android:layout_width="fill_parent"
			       android:layout_height="wrap_content"
			       android:prompt="@string/epg_list_time_label"/>
    
    </LinearLayout>
    
    <Spinner
        android:id="@+id/epg_list_channel_spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/epg_list_channel_spinner"/>
    
    <ListView
        android:id="@+id/whatson_list"        
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/epg_list_time_spinner"
        android:layout_alignWithParentIfMissing="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:cacheColorHint="?android:attr/colorBackground"/>
        
     <TextView
            android:id="@+id/epg_list_search_label"      
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/epg_list_search_label"/>
     
</LinearLayout>
